--- a/seriex.to.html
+++ b/seriex.to.html
@@ -1,7 +1,7 @@
 <div id="dark">
                         <div class="mejs-wrapper mejs-green">
                             
-                            <video style="width:100%;height:100%;" poster="assets/img/thumbnails/ep/1562457908-003-026.jpg" preload="none" autoplay="true" controls playsinline webkit-playsinline>
+                            <video style="width:100%;height:100%;" poster="assets/img/thumbnails/ep/1562457908-003-026.jpg" preload="true" autoplay="true" controls playsinline webkit-playsinline>
 
 <source type="video/mp4" src="https://vk.com/doc-192921485_543994127">
 
