--- a/newindex.html
+++ b/newindex.html
@@ -1,70 +1,72 @@
-
-			<div class="section-wrapper cf">
-	<div class="section-wrapper-content cf"><div class="s section header header-01 cf design-13 sc-m wnd-background-image">
-
-	<div class="nav-line initial-state cf header-fixed wnd-fixed header-bg">
-
-		<div class="section-bg s-bg">
-			<div class="section-bg-layer wnd-background-image fx-none bgatt-fixed bgpos-center-center" style="background-image:url('https://miraculous775.webnode.com/_files/200000027-537bc537be/450/76 sin título_20200221203424.png')">
-				
-			</div>
-			<div class="section-bg-layer section-bg-overlay overlay-black-strong"></div>
-		</div>
-
-		<div class="section-inner">
-
-			<div class="logo logo-default lobster wnd-logo-with-text wnd-iar-1-1" id="wnd_LogoBlock_613964" data-wnd_mvc_type="wnd.fe.LogoBlock">
-    <div class="logo-content">
-        <a href="/home/">
-            <div class="image-content">
-	            <div class="image-content-cell">
-                    <img src="https://miraculous775.webnode.com/_files/200000028-d9d65d9d67/200/unnamed.png">
+<!DOCTYPE html>
+<!-- Created By CodingNepal -->
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Responsive Drop-down Menu Bar</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body>
+    <nav>
+      <div class="logo">
+CodingNepal</div>
+<label for="btn" class="icon">
+        <span class="fa fa-bars"></span>
+      </label>
+      <input type="checkbox" id="btn">
+      <ul>
+<li><a href="#">Home</a></li>
+<li>
+          <label for="btn-1" class="show">Features +</label>
+          <a href="#">Features</a>
+          <input type="checkbox" id="btn-1">
+          <ul>
+<li><a href="#">Pages</a></li>
+<li><a href="#">Elements</a></li>
+<li><a href="#">Icons</a></li>
+</ul>
+</li>
+<li>
+          <label for="btn-2" class="show">Services +</label>
+          <a href="#">Services</a>
+          <input type="checkbox" id="btn-2">
+          <ul>
+<li><a href="#">Web Design</a></li>
+<li><a href="#">App Design</a></li>
+<li>
+              <label for="btn-3" class="show">More +</label>
+              <a href="#">More <span class="fa fa-plus"></span></a>
+              <input type="checkbox" id="btn-3">
+              <ul>
+<li><a href="#">Submenu-1</a></li>
+<li><a href="#">Submenu-2</a></li>
+<li><a href="#">Submenu-3</a></li>
+</ul>
+</li>
+</ul>
+</li>
+<li><a href="#">Portfolio</a></li>
+<li><a href="#">Contact</a></li>
+</ul>
+</nav>
+    <div class="content">
+      <header>Responsive Drop-down Menu Bar</header>
+      <p>
+HTML and CSS (Media Query)</p>
 </div>
-            </div>
-            
-	        <div class="text-content-outer">
-		        <span class="text-content"><font class="wnd-font-size-80">Miraculous</font></span>
-	        </div>
-        </a>
-    </div>
-</div>
+<script>
+      $('.icon').click(function(){
+        $('span').toggleClass("cancel");
+      });
+    </script>
 
-			
+  </body>
+</html>
 
-			<nav id="menu" role="navigation" data-mobile="slide"><div class="menu-font">
-	<a href="#" class="close-menu" rel="nofollow">
-		<span>Close Menu</span>
-	</a>
-	<ul class="level-1"><li>
-			<a class="menu-item" href="/music/"><span class="menu-item-text">Music</span></a>
-			
-		</li><li>
-			<a class="menu-item" href="/comic-books/"><span class="menu-item-text">Comics</span></a>
-			
-		</li><li>
-			<a class="menu-item" href="/a/"><span class="menu-item-text">||</span></a>
-			
-		</li><li class="wnd-active-path">
-			<a class="menu-item" href="/en/"><span class="menu-item-text">English </span></a>
-			
-		</li><li>
-			<a class="menu-item" href="/es/"><span class="menu-item-text">Español</span></a>
-			
-		</li><li>
-			<a class="menu-item" href="/fr/"><span class="menu-item-text">Français</span></a>
-			
-		</li>
-	</ul><span class="more-text">More</span>
-</div></nav><script type="application/javascript">var el=document.getElementById("menu");"undefined"!=typeof el&&(el.style.display="none")</script><div id="menu-mobile" class="hidden">
-				<a href="#" id="menu-submit"><span></span>Menu</a>
-			</div>
-
-		</div>
-	</div>
-</div></div>
-</div>
-
-		</header><main id="main" class="l-m cf" role="main">
+<main id="main" class="l-m cf" role="main">
 
 			<div class="section-wrapper cf">
 	<div class="section-wrapper-content cf"><section class="s section default-01 design-01 sc-m wnd-background-image"><div class="section-bg s-bg">
