--- a/navbar-2/navbar.html
+++ b/navbar-2/navbar.html
@@ -24,13 +24,11 @@
 <body>
     <nav>
         <ul class="menu">
-            <li class="logo"><a href="#">FollowAndrew.dev</a></li>
-            <li class="item"><a href="#">Home</a></li>
-            <li class="item"><a href="#">About</a></li>
-            <li class="item"><a href="#">Services</a></li>
+            <li class="logo"><a href="#">Miraculous</a></li>
+            <li class="item"><a href="#">Music</a></li>
+            <li class="item"><a href="#">Comics</a></li>
             </li>
-            <li class="item button"><a href="#">Log In</a></li>
-            <li class="item button secondary"><a href="#">Sign Up</a></li>
+        <li class="item button"><a href="#">Select Language</a></li>
             <li class="toggle"><span class="bars"></span></li>
         </ul>
     </nav>
