--- a/navbar-5/index.html
+++ b/navbar-5/index.html
@@ -26,16 +26,15 @@
           <a href="#">Web Design</a>
         </li>
         <li>
-          <a style="background:rgba(255, 0, 0);color: white;" href="//web.archive.org/web/20200116174219/https://miraculousladybug.to/en/premium" class="sidenav__menu-url"><i style="margin-right: 4px;" class="fas fa-video"></i>No Ads - Premium</a></a>
+          <a style="background:rgba(255, 0, 0);color: white;"  class="sidenav__menu-url"><i style="margin-right: 4px;" class="fas fa-video"></i>Select Language</a></a>
           <ul class="nav-dropdown">
             <li>
-              <a href="#">HTML</a>
+              <a href="#">Español</a>
             </li>
             <li>
-              <a href="#">CSS</a>
+              <a href="#">Français</a>
             </li>
             <li>
-              <a href="#">JavaScript</a>
             </li>
           </ul>
         </li>
