--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </script>
 </head>
 <body class="l l-01 layout-01 wt-menu-active-bb c-s-l wt-page ac-h ac-i   b-btn-sq b-btn-s-l b-btn-dn b-btn-bw-1 img-d-n img-t-o img-h-z line-solid   lbox-d   wnd-fe">
-	<div class="main spinner-1">
+	<div class="main">
 	<div class="wnd-page cs-beige ac-forest">
 
 	<div id="wrapper" class="l-w cf t-21">
