--- a/pagina-principal.html
+++ b/pagina-principal.html
@@ -10,8 +10,8 @@
 
 <link rel="shortcut icon" type="image/x-icon" href="https://files.miraculousladybug.cf/favicon.png">
 <link rel="canonical" href="">
-<meta property="og:site_name" content="Miraculous: Tales of Ladybug & Cat Noir">
-<meta property="og:title" content="Miraculous: Tales of Ladybug & Cat Noir">
+<meta property="og:site_name" content="Watch Miraculous: Tales of Ladybug & Cat Noir online and for free!">
+<meta property="og:title" content="Watch Miraculous: Tales of Ladybug & Cat Noir online and for free!">
 <meta property="og:image" content="https://files.miraculousladybug.cf/web_image.png">
 <meta property="og:description" content="All episodes from Miraculous Ladybug in HD, totally free and in more than three languages!"><meta property="og:site_name" content="Miraculous Ladybug">
 <meta property="og:url" content="">
@@ -19,12 +19,12 @@
 <meta property="og:image" content="https://files.miraculousladybug.cf/web_image.png">
 <meta property="og:image:width" content="100">
 <meta property="og:image:height" content="100">
-<meta itemprop="name" content="Miraculous: Tales of Ladybug & Cat Noir">
+<meta itemprop="name" content="Watch Miraculous: Tales of Ladybug & Cat Noir online and for free!">
 <meta itemprop="url" content="">
 <meta itemprop="thumbnailUrl" content="https://files.miraculousladybug.cf/favicon.png">
 <link rel="image_src" href="https://files.miraculousladybug.cf/favicon.png">
 <meta itemprop="image" content="https://files.miraculousladybug.cf/favicon.png">
-<meta name="twitter:title" content="Miraculous: Tales of Ladybug & Cat Noir">
+<meta name="twitter:title" content="Watch Miraculous: Tales of Ladybug & Cat Noir online and for free!">
 <meta name="twitter:image" content="https://files.miraculousladybug.cf/web_image.png">
 <meta property="og:description" content="All episodes from Miraculous Ladybug in HD, totally free and in more than three languages!">
 <meta name="twitter:url" content="">
