--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<div class="nav-line initial-state cf header-fixed wnd-fixed header-bg">
 
 		<div class="section-bg s-bg">
-			<div class="section-bg-layer wnd-background-image fx-none bgatt-fixed bgpos-center-center" style="background-image:url('https://miraculous775.webnode.com/_files/200000027-537bc537be/450/76 sin título_20200221203424.png')">
+			<div class="section-bg-layer wnd-background-image fx-none bgatt-fixed bgpos-center-center" style="background-image:url('https://files.miraculousladybug.cf/wallpaper2.jpeg')">
 				
 			</div>
 			<div class="section-bg-layer section-bg-overlay overlay-black-strong"></div>
