--- a/login_form/index.html
+++ b/login_form/index.html
@@ -27,6 +27,9 @@
     <input type="password" placeholder="Enter password..." id="password" />
 
     <input type="submit" value="Login" />
+        <a href="/pricing.html">
+   <input type="button" value="Register now!" />
+</a> 
   </form>
 
   <!-- the JavaScript code should go as contents of this tag -->
